# predictive-ops-service

./: .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 44f65c4956c2_init.py
backend/app/: auth.py  config.py  database.py  deps.py  main.py
backend/app/models/: __init__.py  asset.py  reading.py  risk_score.py  tenant.py  user.py
backend/app/routers/: assets.py  auth.py  readings.py  risk_scores.py
backend/app/schemas/: asset.py  auth.py  reading.py  risk_score.py
backend/jobs/: run_inference.py
backend/tests/: conftest.py  test_api.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  queries.ts  types.ts
frontend/src/components/: InfoIcon.tsx  RiskBadge.tsx  Tooltip.tsx
frontend/src/content/: infoTips.ts
frontend/src/pages/: AssetDetailPage.tsx  AssetsPage.tsx  DashboardPage.tsx  LoginPage.tsx
infra/: main.bicep
